updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am just a small town kid looking to make it big and live the life i want to live </p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I am from Somerset, Ohio</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>My favorite hobbies linclude videogames and sports mostly football and basketball.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>My dream job would be to coach for the Cleveland Browns.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I currently live in Nelsonville, Ohio</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>To enjoy my life do things I love and Make money to pursue all my goals and hobbies.</p>
     </section>
 
     <footer id="footer">
